--- a/static/otherUserProfile.css
+++ b/static/otherUserProfile.css
@@ -165,9 +165,7 @@ fieldset legend {
 
 }
 
-.post {
-    overflow: hidden;
-}
+
 
 .post-count, .link-active {
     color: var(--accent-clr) !important;
